++Added Recommendation slider, Home Menu Slider and also news on home page

--- a/src/app/feature-modules/user/home-con/home-page/home-page.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/home-page.component.html
@@ -1,4 +1,3 @@
-
 <div class="">
   <div class="t-l">
     <div class="post">
@@ -170,39 +169,114 @@
         <div class="row recom-con">
           <div class="col-12 p-0">
             <div class="r-h-c">
-              <div class="badge badge-success f-l m-r-5"><i class="fa fa-bookmark"></i></div>
-              <p> For You</p>
+              <div class="badge badge-secondary f-l m-r-5"><i class="fa fa-bookmark"></i></div>
+              <p> Recomendation</p>
             </div>
             <hr class="hr-r">
 
           </div>
-          <div class="col-6 recom">
-            <div class="">
-              <div class="pic-c bcimg" style="background-image: url('./assets/images/traffic.jpg')">
+          <div class="r-com-con">
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/traffic.jpg')">
+
+                  <div class="r-o-c">
+                    <div class="btn btn-sm btn-block btn-secondary">Follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+
+                </div>
 
               </div>
-              <div class="r-d-con">
-                <p class="title">Solving Addis Ababa Traffic Problem.</p>
-                <p class="desc">Addis traffic problem is getting worse costing the economy to lose billions of dollars just last year.</p>
+            </div>
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/transaction.jpg')">
+                  <div class="r-o-c">
+                    <div class="btn btn-sm btn-block btn-secondary">Follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+                </div>
+
               </div>
             </div>
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/background.jpg')">
+                  <div class="r-o-c">
+                    <div class="btn btn-sm btn-block btn-secondary">Follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
-          <div class="col-6 recom">
-            <div class="">
-              <div class="pic-c bcimg" style="background-image: url('./assets/images/transaction.jpg')"></div>
-              <div class="r-d-con">
-                <p class="title">Why is ethiopia still far behind mobile money.</p>
-                <p class="desc">We are using cash 95% of the time and the tech industry is not doing well enough to take the lead.</p>
-              </div>
+        </div>
+      </div>
+    </div>
+    <div class="post">
+      <div class="container news-con">
+        <div class="row recom-con">
+          <div class="col-12 p-0">
+            <div class="r-h-c">
+              <div class="badge badge-secondary f-l m-r-5"><i class="fa fa-newspaper-o"></i></div>
+              <p> News</p>
             </div>
+            <hr class="hr-r">
+
           </div>
 
+        </div>
+        <div class="news-content col-10">
+          <div class="news-con-in">
+            <small>May 1</small>
+            <p class="head">Bernald Nolan</p>
+            <p class="desc">The content of the news snippet will be seen here. </p>
+          </div>
+          <div class="n-i-con bcimg" style="background-image: url('./assets/images/background3.jpg')">
+
+          </div>
+        </div>
+        <div class="news-content col-10">
+          <div class="news-con-in">
+            <small>May 1</small>
+            <p class="head">Bernald Nolan</p>
+            <p class="desc">The content of the news snippet will be seen here. </p>
+          </div>
+          <div class="n-i-con bcimg" style="background-image: url('./assets/images/background.jpg')">
+
+          </div>
         </div>
       </div>
 
     </div>
+
     <div class="loading row">
       <div class="col">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
