--- a/src/app/feature-modules/user/user/user.component.html
+++ b/src/app/feature-modules/user/user/user.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col">
           <div class="ii-c">
-            <i class="fa fa-money"></i>
+            <i class="fa fa-users"></i>
           </div>
 
         </div>
