--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,7 @@
 }
 
 html, body {
+  background-color: #2b2e3f;
   font-family:"Noto Sans", sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" ;
   height: 100%;
