**Modified recommendation button position and Size of the tags on saves page

--- a/src/app/feature-modules/user/home-con/home-page/home-page.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/home-page.component.html
@@ -174,7 +174,6 @@
               <p> Recomendation</p>
             </div>
             <hr class="hr-r">
-
           </div>
           <div class="r-com-con">
             <div class="recom">
@@ -182,7 +181,7 @@
                 <div class="pic-c bcimg" style="background-image: url('./assets/images/traffic.jpg')">
 
                   <div class="r-o-c">
-                    <div class="btn btn-sm btn-block btn-secondary">Follow</div>
+                    <div class="btn btn-block btn-success">Follow</div>
                     <div class="r-o-t-c">
                       <p>Wild West</p>
                       <p class="sm">Robin Dark</p>
@@ -200,7 +199,7 @@
               <div class="">
                 <div class="pic-c bcimg" style="background-image: url('./assets/images/transaction.jpg')">
                   <div class="r-o-c">
-                    <div class="btn btn-sm btn-block btn-secondary">Follow</div>
+                    <div class="btn btn-block btn-warning">Follow</div>
                     <div class="r-o-t-c">
                       <p>Wild West</p>
                       <p class="sm">Robin Dark</p>
@@ -217,7 +216,7 @@
               <div class="">
                 <div class="pic-c bcimg" style="background-image: url('./assets/images/background.jpg')">
                   <div class="r-o-c">
-                    <div class="btn btn-sm btn-block btn-secondary">Follow</div>
+                    <div class="btn  btn-block btn-success">Follow</div>
                     <div class="r-o-t-c">
                       <p>Wild West</p>
                       <p class="sm">Robin Dark</p>
